# ionoshpereModel

1dSim/: .gitignore  Makefile  main.cpp  plotter.py  test.py
docs/: '  theoreticalframework.tex
ionosphereSimulation/: .clang-format  CMakeLists.txt
ionosphereSimulation/include/: Conductance.hpp  FileParser.hpp  Grid.hpp  Solver.hpp
ionosphereSimulation/src/: CMakeLists.txt  Conductance.cpp  FileParser.cpp  Grid.cpp
legacySolution/src/: CPTG_util.c  CPTG_util.h  IONOSPHERE.h  IONOSPHERE_cgrid.c  IONOSPHERE_conductance.c  IONOSPHERE_current.c  IONOSPHERE_fgrid.c  IONOSPHERE_magbfield.c  IONOSPHERE_magdim.c  IONOSPHERE_magfac.c  IONOSPHERE_magvel.c  IONOSPHERE_matcopy.c  IONOSPHERE_matzero.c  IONOSPHERE_multigrid.c  IONOSPHERE_prolong.c  IONOSPHERE_residual.c  IONOSPHERE_restrict.c  IONOSPHERE_smoother.c  IONOSPHERE_update.c  IONOSPHERE_util.c  IONOSPHERE_util.h  NR.h  NR_addint.c  NR_anorm2.c  NR_copy.c  NR_fill0.c  NR_interp.c  NR_lop.c  NR_matadd.c  NR_matsub.c  NR_mgfas.c  NR_mglin.c  NR_relax.c  NR_relax2.c  NR_resid.c  NR_rstrct.c  NR_slvsm2.c  NR_slvsml.c  NR_util.c  NR_util.h  (+14 more)
